Fixed bug #70724 (Undefined Symbols from opcache.so on Mac OS X 10.10)